adding support for zen coding expanders, local jquery file

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
  
  <title>coDEsign</title>
  <link href="default.css" media="all" rel="stylesheet">
- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js"></script>
+<!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+ <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js"></script> -->
+ <script type="text/javascript" src="jquery.js"></script>
  <script type="text/javascript" src="underscore.js"></script>
+ <script type="text/javascript" src="zen_textarea.js"></script>
  <script type="text/javascript" src="default.js"></script>
  
  </head>
