now supports zen coding expanders and switched hotkeys for heirarchy

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js"></script> -->
  <script type="text/javascript" src="jquery.js"></script>
  <script type="text/javascript" src="underscore.js"></script>
- <script type="text/javascript" src="zen_textarea.js"></script>
+ <script type="text/javascript" src="zen_settings.js"></script>
+ <script type="text/javascript" src="zen_coding.js"></script>
  <script type="text/javascript" src="default.js"></script>
  
  </head>
@@ -237,7 +238,7 @@
 					<% } else if (curMode == 3) { %>
 					<div class="ct">
 						<form id="markupEdit" class="markupEdit">
-							<input id="markup" name="markup" placeholder='<div></div>' />
+							<input id="markup" name="markup" placeholder='div#myId>span.className' />
 						</form>
 						<ul class="btns inline">
 							<li id="inside" class="modifyDom">add inside</li>
