--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
  <head>
  
  <title>coDEsign</title>
+ <link type="text/css" href="jquery-ui-1.8.17.custom.css" rel="stylesheet" />
  <link href="default.css" media="all" rel="stylesheet">
 <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js"></script> -->
- <script type="text/javascript" src="jquery.js"></script>
+ <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
+ <script type="text/javascript" src="jquery-ui-1.8.17.custom.min.js"></script>
  <script type="text/javascript" src="underscore.js"></script>
  <script type="text/javascript" src="zen_settings.js"></script>
  <script type="text/javascript" src="zen_coding.js"></script>
@@ -40,10 +42,18 @@
 			<script type="text/template" id="colorTemplate">
 			<div class="ct">
 			    <a href="#" class="closePalette" id="closePalette">x</a>
+			    
+			    <div class="sliders">
+			        <div id="hueSlider" class="hueSlider slider"></div>
+			        <div id="satSlider" class="satSlider slider"></div>
+			        <div id="lightSlider" class="lightSlider slider"></div>
+			        <div id="alphaSlider" class="alphaSlider slider"></div>
+			    </div>
+			    
 				<label for="h" title="Hue">H: </label><input type="number" min="0" max="360" class="colorVal" name="h" id="h" value="<%=color.hue %>" /><br>
 				<label for="s" title="Saturation">S: </label><input type="number" min="0" max="100" class="colorVal" name="s" id="s" value="<%=color.sat %>" /><br>
 				<label for="l" title="Lightness">L: </label><input type="number" min="0" max="100" class="colorVal" name="l" id="l" value="<%=color.light %>" /><br>
-				<label for="a" title="Alpha">A: </label><input type="number" min="0.0" max="1.0" class="colorVal" name="a" id="a" value="<%=color.alpha %>" /> 
+				<label for="a" title="Alpha">A: </label><input type="number" min="0.0" max="1.0" class="colorVal" name="a" id="a" value="<%=color.alpha || 1.0 %>" /> 
 				    <input type="checkbox" class="colorVal" name="useAlpha" id="useAlpha" <% if (color.alpha != undefined) { %>checked<% } %> />
 			</div>
 			</script>
